Fix spacing issue in footer

--- a/assets/stylesheets/partials/_footer.scss
+++ b/assets/stylesheets/partials/_footer.scss
@@ -51,7 +51,7 @@
 	
 	dt {
 		clear: left;
-		min-width: 25%;
+		min-width: 30%;
 		margin-right: 5%;
 		color: $teal;
 		text-transform: uppercase;
